对回车，tab和""等进行进行优化。

--- a/regexp/index.html
+++ b/regexp/index.html
@@ -6,11 +6,10 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="input-wrap">
-    <textarea id = "input"></textarea>
+  <div class="input-wrap" id="input-wrap">
+    <textarea id="input"></textarea>
   </div>
-  <div id = "output">结果</div>
-  <button id = "click">点我</button>
+  <textarea readonly id="history"></textarea>
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
