--- a/regexp/index.html
+++ b/regexp/index.html
@@ -6,10 +6,20 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="input-wrap" id="input-wrap">
-    <textarea id="input"></textarea>
-  </div>
-  <textarea readonly id="history"></textarea>
+  <header>
+    <div class="title">JavaScript Online</div>
+  </header>
+  <main id="content">
+    <div class="input-wrap" id="input-wrap">
+      <textarea id="input" placeholder="Enter your JavaScript to test"></textarea>
+    </div>
+    <div id="history">
+      <!-- <div class="history-box">
+        <div class='box-title'><span>&gt; </span>1+1</div>
+        <div class='box-content'><span>&lt; </span>a+abc</div>
+      </div> -->
+    </div>
+  </main>
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
