对整个页面结构进行了修改。更像终端形式。

--- a/regexp/index.html
+++ b/regexp/index.html
@@ -10,14 +10,14 @@
     <div class="title">JavaScript Online</div>
   </header>
   <main id="content">
-    <div class="input-wrap" id="input-wrap">
-      <textarea id="input" placeholder="Enter your JavaScript to test"></textarea>
-    </div>
     <div id="history">
       <!-- <div class="history-box">
-        <div class='box-title'><span>&gt; </span>1+1</div>
-        <div class='box-content'><span>&lt; </span>a+abc</div>
+        <div class='box-title'>1+1</div>
+        <div class='box-content'>a+abc</div>
       </div> -->
+    </div>
+    <div class="input-wrap" id="input-wrap">
+      <textarea id="input" placeholder="Enter your JavaScript to test. Use ctrl-Enter to run!!"></textarea>
     </div>
   </main>
   <script type="text/javascript" src="index.js"></script>
